@@ -1,3 +1,7 @@
+
+2012-09-26 Franz Holzinger <franz@ttproducts.de>
+	* new feature: enhance searchWhere with regular expression
+
 2012-07-05 Franz Holzinger <franz@ttproducts.de>
 	* new feature: use searchWhere from tslib_content but consider the language table
 	* fix bug: make it PHP 5.4 compliant and remove the address operator before objects
